--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,48 @@
     box-sizing: border-box;
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+
+/* For tablets: */
+/*@media only screen and (min-width: 600px) {
+    
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+}*/
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 49%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+}
 
 [class*="col-"] {
     float: left;
     padding: 15px;
 }
-
 
 
 .row::after {
@@ -71,10 +95,58 @@ html {
 	text-shadow:0px 1px 0px #2f6627;
 }
 
+.downloadNowButton {
+	-moz-box-shadow: 0px 0px 0px 2px #3dc21b;
+	-webkit-box-shadow: 0px 0px 0px 2px #3dc21b;
+	box-shadow: 0px 0px 0px 2px #3dc21b;
+	background-color:#2aa64b;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:12px;
+    padding:12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 5%;
+}
+
 .imgContainer{
     border: 2px solid black;
     text-align: center;
+    min-height:15em;
 }
+
+.downloadableImage{
+    width: 70%;
+    vertical-align: middle;
+    min-height:15em;
+    max-height:15em;
+}
+
+.stickyPrintDialog{
+    padding: 1%;
+    color: black;
+    /*position: fixed;*/
+    /*left: 50%;
+    top: 1%;
+    z-index: 100;*/
+    border-top: 0;
+    background-color: orange;
+    font-size: small;
+}
+
+.hidden{
+    visibility: hidden;
+}
+
 
 /*.myButton:hover {
 	background-color:#5cbf2a;
