--- a/styles.css
+++ b/styles.css
@@ -185,8 +185,10 @@ html {
         border: 1px solid black;
         margin-top: 5%;
         margin-bottom: 5%;
-        width: 50%;
+        width: 40%;
         min-width: 10em; 
+        padding-bottom: 2%;
+        padding-top: 2%;
 
         text-align: center;        
         display: inline-block;
