--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ html {
 	font-size:19px;
 	padding:12px 37px;
 	text-decoration:none;
+    vertical-align: top;
 }
 
 .downloadNowButton {
@@ -224,3 +225,61 @@ html {
     .print-only { display: block; }
     .non-printable { display: none; }    
 }
+
+
+.tags{
+        margin:0;
+        padding:0;        
+        right:24px;
+        bottom:-12px;
+        list-style:none;
+    }
+
+.tags li, .tags a{
+        float:left;
+        height:24px;
+        line-height:24px;
+        position:relative;
+        font-size:11px;
+        margin-bottom: 5px;
+    }
+
+.tags a{
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#1A2520;
+	color:white;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;	
+	} 
+
+.tags a:before{
+	content:"";
+	float:left;
+	position:absolute;
+	top:0;
+	left:-12px;
+	width:0;
+	height:0;
+	border-color:transparent #1A2520 transparent transparent;
+	border-style:solid;
+	border-width:12px 12px 12px 0;		
+	}
+.tags a:after{
+	content:"";
+	position:absolute;
+	top:10px;
+	left:0;
+	float:left;
+	width:4px;
+	height:4px;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	background:#fff;
+	}
