--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,10 @@ html {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:18px;
-    padding:7px;
+    padding-top:7px;
+    padding-bottom:7px;
+    padding-left:10px;
+    padding-right:10px;
 	text-decoration:none;
     min-width: 45%;
     /*margin-left: 25%;
@@ -233,7 +236,7 @@ html {
         right:24px;
         bottom:-12px;
         list-style:none;
-    }
+}
 
 .tags li, .tags a{
         float:left;
@@ -242,12 +245,12 @@ html {
         position:relative;
         font-size:11px;
         margin-bottom: 5px;
-    }
+}
 
 .tags a{
 	margin-left:20px;
 	padding:0 10px 0 12px;
-	background:#1A2520;
+	background:#2D744E;
 	color:white;
 	text-decoration:none;
 	-moz-border-radius-bottomright:4px;
@@ -256,7 +259,7 @@ html {
 	-moz-border-radius-topright:4px;
 	-webkit-border-top-right-radius:4px;	
 	border-top-right-radius:4px;	
-	} 
+} 
 
 .tags a:before{
 	content:"";
@@ -266,10 +269,11 @@ html {
 	left:-12px;
 	width:0;
 	height:0;
-	border-color:transparent #1A2520 transparent transparent;
+	border-color:transparent #2D744E transparent transparent;
 	border-style:solid;
 	border-width:12px 12px 12px 0;		
-	}
+}
+
 .tags a:after{
 	content:"";
 	position:absolute;
@@ -282,4 +286,14 @@ html {
 	-webkit-border-radius:2px;
 	border-radius:2px;
 	background:#fff;
-	}
+}
+
+.adRow{
+
+}
+
+.adColumn{
+    background-color:SteelBlue; 
+    color:white;
+    width: 100%;
+}
